--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "5.1.0",
     "react": "17.0.2",
+    "react-bootstrap": "1.6.1",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0"
   },
